Created some bot functions

--- a/files/analyze.ipynb
+++ b/files/analyze.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 669,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 670,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 671,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -157,7 +157,7 @@
        "0  На этой странице вы можете посмотреть аниме Ha...  "
       ]
      },
-     "execution_count": 671,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -168,16 +168,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 672,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#data['Additional'][434]"
+    "#data['Additional'][100]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 673,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -206,14 +206,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 674,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "<ipython-input-674-8f881c3df74d>:7: SettingWithCopyWarning: \n",
+      "<ipython-input-48-955114f09a10>:7: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
@@ -223,22 +223,22 @@
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  self._setitem_with_indexer(indexer, value)\n",
-      "<ipython-input-674-8f881c3df74d>:8: SettingWithCopyWarning: \n",
+      "<ipython-input-48-955114f09a10>:8: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  data['Season'][i] = last_sentence[1] if len(last_sentence) > 1 else \"\"\n",
-      "<ipython-input-674-8f881c3df74d>:9: SettingWithCopyWarning: \n",
+      "<ipython-input-48-955114f09a10>:9: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  data['Year'][i] = last_sentence[2] if len(last_sentence) > 2 else \"\"\n",
-      "<ipython-input-674-8f881c3df74d>:27: SettingWithCopyWarning: \n",
+      "<ipython-input-48-955114f09a10>:27: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  data['Seria_name'][i] = result_name\n",
-      "<ipython-input-674-8f881c3df74d>:28: SettingWithCopyWarning: \n",
+      "<ipython-input-48-955114f09a10>:28: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
@@ -249,7 +249,7 @@
    "source": [
     "data['Studio'], data['Season'],data['Year'],data['Season_name'],data['Seria_name']=(np.nan for _ in range(5))\n",
     "\n",
-    "for i in range(1000,row):\n",
+    "for i in range(0,row):\n",
     "    #информация о студии, времени года и годе релиза\n",
     "    last_sentence = getLastSentence(data.Additional[i])\n",
     "\n",
@@ -280,7 +280,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 675,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -290,7 +290,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 676,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -299,7 +299,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 677,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -308,7 +308,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 678,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
@@ -362,11 +362,11 @@
        "      <td>Нарушив главный запрет Алхимии и попытавшись в...</td>\n",
        "      <td>/posters/2400.10127424713.jpg</td>\n",
        "      <td>['Стальной алхимик: Братство ', ' Hagane no Re...</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>Bones</td>\n",
+       "      <td>весеннем</td>\n",
+       "      <td>2009.0</td>\n",
+       "      <td>Братство</td>\n",
+       "      <td>Стальной алхимик</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -380,11 +380,11 @@
        "      <td>Акихабара – интереснейшее место, где обитают с...</td>\n",
        "      <td>/posters/914.11477207553.jpg</td>\n",
        "      <td>['Врата Штейна ', ' シュタインズ・ゲート ', ' Steins Gat...</td>\n",
+       "      <td>White Fox</td>\n",
+       "      <td>весеннем</td>\n",
+       "      <td>2011.0</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>Врата Штейна</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -398,11 +398,11 @@
        "      <td>NaN</td>\n",
        "      <td>/posters/9815.35700322133.jpg</td>\n",
        "      <td>['Gintama° ', ' Гинтама 4 ', ' Gintama (2015) ...</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>Bandai Namco Pictures</td>\n",
+       "      <td>весеннем</td>\n",
+       "      <td>2015.0</td>\n",
+       "      <td>4</td>\n",
+       "      <td>Гинтама</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -416,11 +416,11 @@
        "      <td>Жизнь в этой реальности устроена, как обычно –...</td>\n",
        "      <td>/posters/4023.9592776303.jpg</td>\n",
        "      <td>['Hunter x Hunter (2011) ', ' Охотник х Охотни...</td>\n",
+       "      <td>Madhouse Studios</td>\n",
+       "      <td>осеннем</td>\n",
+       "      <td>2011.0</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>Охотник х Охотник (2011)</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -434,11 +434,11 @@
        "      <td>Продолжение приключений Гинтоки и его команды ...</td>\n",
        "      <td>/posters/216.40890160023.jpg</td>\n",
        "      <td>['Гинтама 2 ', \" Gintama' \", ' Gintama` ', ' 銀...</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>Sunrise</td>\n",
+       "      <td>весеннем</td>\n",
+       "      <td>2011.0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>Гинтама</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -494,22 +494,22 @@
        "3   /posters/4023.9592776303.jpg   \n",
        "4   /posters/216.40890160023.jpg   \n",
        "\n",
-       "                                         Minor_names Studio Season  Year  \\\n",
-       "0  ['Стальной алхимик: Братство ', ' Hagane no Re...    NaN    NaN   NaN   \n",
-       "1  ['Врата Штейна ', ' シュタインズ・ゲート ', ' Steins Gat...    NaN    NaN   NaN   \n",
-       "2  ['Gintama° ', ' Гинтама 4 ', ' Gintama (2015) ...    NaN    NaN   NaN   \n",
-       "3  ['Hunter x Hunter (2011) ', ' Охотник х Охотни...    NaN    NaN   NaN   \n",
-       "4  ['Гинтама 2 ', \" Gintama' \", ' Gintama` ', ' 銀...    NaN    NaN   NaN   \n",
+       "                                         Minor_names                 Studio  \\\n",
+       "0  ['Стальной алхимик: Братство ', ' Hagane no Re...                  Bones   \n",
+       "1  ['Врата Штейна ', ' シュタインズ・ゲート ', ' Steins Gat...              White Fox   \n",
+       "2  ['Gintama° ', ' Гинтама 4 ', ' Gintama (2015) ...  Bandai Namco Pictures   \n",
+       "3  ['Hunter x Hunter (2011) ', ' Охотник х Охотни...       Madhouse Studios   \n",
+       "4  ['Гинтама 2 ', \" Gintama' \", ' Gintama` ', ' 銀...                Sunrise   \n",
        "\n",
-       "  Season_name Seria_name  \n",
-       "0         NaN        NaN  \n",
-       "1         NaN        NaN  \n",
-       "2         NaN        NaN  \n",
-       "3         NaN        NaN  \n",
-       "4         NaN        NaN  "
+       "     Season    Year Season_name                 Seria_name  \n",
+       "0  весеннем  2009.0   Братство            Стальной алхимик  \n",
+       "1  весеннем  2011.0         NaN              Врата Штейна   \n",
+       "2  весеннем  2015.0           4                   Гинтама   \n",
+       "3   осеннем  2011.0         NaN  Охотник х Охотник (2011)   \n",
+       "4  весеннем  2011.0           2                   Гинтама   "
       ]
      },
-     "execution_count": 678,
+     "execution_count": 52,
      "metadata": {},
      "output_type": "execute_result"
     }
