--- a/files/analyze.ipynb
+++ b/files/analyze.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 100,
    "metadata": {},
    "outputs": [
     {
@@ -20,6 +20,194 @@
     "data = pd.read_csv('anime.csv')\n",
     "print(data.shape)\n",
     "row, col = data.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 101,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Page</th>\n",
+       "      <th>Rus_name</th>\n",
+       "      <th>Eng_name</th>\n",
+       "      <th>Href</th>\n",
+       "      <th>Genres</th>\n",
+       "      <th>Rating</th>\n",
+       "      <th>Description</th>\n",
+       "      <th>Alt_description</th>\n",
+       "      <th>Img</th>\n",
+       "      <th>Minor_names</th>\n",
+       "      <th>Additional</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>Стальной алхимик: Братство смотреть онлайн</td>\n",
+       "      <td>Hagane no Renkinjutsushi (2009) / FMA (2009) с...</td>\n",
+       "      <td>/catalog/hagane-no-renkinjutsushi-2009-2400</td>\n",
+       "      <td>['Экшен', 'Военное', 'Приключения', 'Комедия',...</td>\n",
+       "      <td>9.2</td>\n",
+       "      <td>Описание анимеРемейк одноимённого аниме-сериал...</td>\n",
+       "      <td>Альтернативное описание анимеНарушив главный з...</td>\n",
+       "      <td>/posters/2400.10127424713.jpg</td>\n",
+       "      <td>Стальной алхимик: Братство / Hagane no Renkinj...</td>\n",
+       "      <td>На этой странице вы можете посмотреть аниме Ha...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1</td>\n",
+       "      <td>Врата Штейна смотреть онлайн</td>\n",
+       "      <td>Steins;Gate смотреть онлайн</td>\n",
+       "      <td>/catalog/steins-gate-914</td>\n",
+       "      <td>['Фантастика', 'Триллер']</td>\n",
+       "      <td>9.1</td>\n",
+       "      <td>Описание анимеДействие сериала происходит лето...</td>\n",
+       "      <td>Альтернативное описание анимеАкихабара – интер...</td>\n",
+       "      <td>/posters/914.11477207553.jpg</td>\n",
+       "      <td>Врата Штейна / シュタインズ・ゲート / Steins Gate / シュタイ...</td>\n",
+       "      <td>На этой странице вы можете посмотреть аниме St...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1</td>\n",
+       "      <td>Гинтама 4 сезон смотреть онлайн</td>\n",
+       "      <td>Gintama° смотреть онлайн</td>\n",
+       "      <td>/catalog/gintama-9815</td>\n",
+       "      <td>['Экшен', 'Комедия', 'Исторический', 'Пародия'...</td>\n",
+       "      <td>9.1</td>\n",
+       "      <td>Описание анимеНикто этого уже не ждал и не над...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>/posters/9815.35700322133.jpg</td>\n",
+       "      <td>Gintama° / Гинтама 4 / Gintama (2015) / 銀魂゜ / ...</td>\n",
+       "      <td>На этой странице вы можете посмотреть аниме Gi...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1</td>\n",
+       "      <td>Охотник х Охотник (2011) смотреть онлайн</td>\n",
+       "      <td>Hunter x Hunter (2011) смотреть онлайн</td>\n",
+       "      <td>/catalog/hunter-x-hunter-2011-4023</td>\n",
+       "      <td>['Экшен', 'Приключения', 'Сёнен', 'Супер сила'...</td>\n",
+       "      <td>9.1</td>\n",
+       "      <td>Описание анимеРемейк аниме-сериала «Охотник х ...</td>\n",
+       "      <td>Альтернативное описание анимеЖизнь в этой реал...</td>\n",
+       "      <td>/posters/4023.9592776303.jpg</td>\n",
+       "      <td>Hunter x Hunter (2011) / Охотник х Охотник (20...</td>\n",
+       "      <td>На этой странице вы можете посмотреть аниме Hu...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>1</td>\n",
+       "      <td>Гинтама 2 сезон смотреть онлайн</td>\n",
+       "      <td>Gintama' смотреть онлайн</td>\n",
+       "      <td>/catalog/gintama-216</td>\n",
+       "      <td>['Экшен', 'Комедия', 'Исторический', 'Пародия'...</td>\n",
+       "      <td>9.1</td>\n",
+       "      <td>Описание анимеНад древним Эдо, которым правит ...</td>\n",
+       "      <td>Альтернативное описание анимеПродолжение прикл...</td>\n",
+       "      <td>/posters/216.40890160023.jpg</td>\n",
+       "      <td>Гинтама 2 / Gintama' / Gintama` / 銀魂´ / Gintam...</td>\n",
+       "      <td>На этой странице вы можете посмотреть аниме Gi...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Page                                    Rus_name  \\\n",
+       "0     1  Стальной алхимик: Братство смотреть онлайн   \n",
+       "1     1                Врата Штейна смотреть онлайн   \n",
+       "2     1             Гинтама 4 сезон смотреть онлайн   \n",
+       "3     1    Охотник х Охотник (2011) смотреть онлайн   \n",
+       "4     1             Гинтама 2 сезон смотреть онлайн   \n",
+       "\n",
+       "                                            Eng_name  \\\n",
+       "0  Hagane no Renkinjutsushi (2009) / FMA (2009) с...   \n",
+       "1                        Steins;Gate смотреть онлайн   \n",
+       "2                           Gintama° смотреть онлайн   \n",
+       "3             Hunter x Hunter (2011) смотреть онлайн   \n",
+       "4                           Gintama' смотреть онлайн   \n",
+       "\n",
+       "                                          Href  \\\n",
+       "0  /catalog/hagane-no-renkinjutsushi-2009-2400   \n",
+       "1                     /catalog/steins-gate-914   \n",
+       "2                        /catalog/gintama-9815   \n",
+       "3           /catalog/hunter-x-hunter-2011-4023   \n",
+       "4                         /catalog/gintama-216   \n",
+       "\n",
+       "                                              Genres  Rating  \\\n",
+       "0  ['Экшен', 'Военное', 'Приключения', 'Комедия',...     9.2   \n",
+       "1                          ['Фантастика', 'Триллер']     9.1   \n",
+       "2  ['Экшен', 'Комедия', 'Исторический', 'Пародия'...     9.1   \n",
+       "3  ['Экшен', 'Приключения', 'Сёнен', 'Супер сила'...     9.1   \n",
+       "4  ['Экшен', 'Комедия', 'Исторический', 'Пародия'...     9.1   \n",
+       "\n",
+       "                                         Description  \\\n",
+       "0  Описание анимеРемейк одноимённого аниме-сериал...   \n",
+       "1  Описание анимеДействие сериала происходит лето...   \n",
+       "2  Описание анимеНикто этого уже не ждал и не над...   \n",
+       "3  Описание анимеРемейк аниме-сериала «Охотник х ...   \n",
+       "4  Описание анимеНад древним Эдо, которым правит ...   \n",
+       "\n",
+       "                                     Alt_description  \\\n",
+       "0  Альтернативное описание анимеНарушив главный з...   \n",
+       "1  Альтернативное описание анимеАкихабара – интер...   \n",
+       "2                                                NaN   \n",
+       "3  Альтернативное описание анимеЖизнь в этой реал...   \n",
+       "4  Альтернативное описание анимеПродолжение прикл...   \n",
+       "\n",
+       "                             Img  \\\n",
+       "0  /posters/2400.10127424713.jpg   \n",
+       "1   /posters/914.11477207553.jpg   \n",
+       "2  /posters/9815.35700322133.jpg   \n",
+       "3   /posters/4023.9592776303.jpg   \n",
+       "4   /posters/216.40890160023.jpg   \n",
+       "\n",
+       "                                         Minor_names  \\\n",
+       "0  Стальной алхимик: Братство / Hagane no Renkinj...   \n",
+       "1  Врата Штейна / シュタインズ・ゲート / Steins Gate / シュタイ...   \n",
+       "2  Gintama° / Гинтама 4 / Gintama (2015) / 銀魂゜ / ...   \n",
+       "3  Hunter x Hunter (2011) / Охотник х Охотник (20...   \n",
+       "4  Гинтама 2 / Gintama' / Gintama` / 銀魂´ / Gintam...   \n",
+       "\n",
+       "                                          Additional  \n",
+       "0  На этой странице вы можете посмотреть аниме Ha...  \n",
+       "1  На этой странице вы можете посмотреть аниме St...  \n",
+       "2  На этой странице вы можете посмотреть аниме Gi...  \n",
+       "3  На этой странице вы можете посмотреть аниме Hu...  \n",
+       "4  На этой странице вы можете посмотреть аниме Gi...  "
+      ]
+     },
+     "execution_count": 101,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data.head(5)"
    ]
   },
   {
@@ -52,7 +240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 102,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -72,7 +260,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 103,
    "metadata": {},
    "outputs": [
     {
@@ -157,7 +345,7 @@
        "0  На этой странице вы можете посмотреть аниме Ha...  "
       ]
      },
-     "execution_count": 45,
+     "execution_count": 103,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -168,16 +356,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 104,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'На этой странице вы можете посмотреть аниме Koukaku Kidoutai: Stand Alone Complex 2nd GIG онлайн и в хорошем качестве. Для начала просмотра выберите серию (см. выше). После выбора серии можно выбрать перевод (русская озвучка или субтитры). Если вам понравилось аниме Призрак в доспехах: Синдром одиночки 2 сезон, то советуем обратить внимание на жанры экшен, военное, фантастика, а также детектив, полиция, меха, сейнен. Ещё вы можете посмотреть другие аниме от студии Production I.G или другие аниме в зимнем сезоне 2004 года.'"
+      ]
+     },
+     "execution_count": 104,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "#data['Additional'][100]"
+    "data['Additional'][100]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 105,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -206,14 +405,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 106,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "<ipython-input-48-955114f09a10>:7: SettingWithCopyWarning: \n",
+      "<ipython-input-106-24d2075b5d72>:7: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
@@ -223,22 +422,22 @@
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  self._setitem_with_indexer(indexer, value)\n",
-      "<ipython-input-48-955114f09a10>:8: SettingWithCopyWarning: \n",
+      "<ipython-input-106-24d2075b5d72>:8: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  data['Season'][i] = last_sentence[1] if len(last_sentence) > 1 else \"\"\n",
-      "<ipython-input-48-955114f09a10>:9: SettingWithCopyWarning: \n",
+      "<ipython-input-106-24d2075b5d72>:9: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  data['Year'][i] = last_sentence[2] if len(last_sentence) > 2 else \"\"\n",
-      "<ipython-input-48-955114f09a10>:27: SettingWithCopyWarning: \n",
+      "<ipython-input-106-24d2075b5d72>:29: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  data['Seria_name'][i] = result_name\n",
-      "<ipython-input-48-955114f09a10>:28: SettingWithCopyWarning: \n",
+      "<ipython-input-106-24d2075b5d72>:30: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
@@ -256,6 +455,8 @@
     "    data['Studio'][i] = last_sentence[0] if len(last_sentence) > 0 else \"\"\n",
     "    data['Season'][i] = last_sentence[1] if len(last_sentence) > 1 else \"\"\n",
     "    data['Year'][i] = last_sentence[2] if len(last_sentence) > 2 else \"\"\n",
+    "    \n",
+    "  #  data['Studio'][i] = list(data['Studio'][i].split(', '))#list\n",
     "    \n",
     "    #информация о сезоне\n",
     "    rus_name = data['Rus_name'][i] \n",
@@ -280,7 +481,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 107,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -290,7 +491,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 108,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -299,7 +500,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 109,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -308,7 +509,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 110,
    "metadata": {},
    "outputs": [
     {
@@ -509,7 +710,7 @@
        "4  весеннем  2011.0           2                   Гинтама   "
       ]
      },
-     "execution_count": 52,
+     "execution_count": 110,
      "metadata": {},
      "output_type": "execute_result"
     }
