Added studios to db

--- a/files/visualisation.ipynb
+++ b/files/visualisation.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 200,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 201,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 202,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -422,7 +422,7 @@
        "[1917 rows x 15 columns]"
       ]
      },
-     "execution_count": 202,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -433,16 +433,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 203,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x7f373e7eec40>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x7fbc61be9e20>"
       ]
      },
-     "execution_count": 203,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -467,16 +467,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 204,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x7f37483d25b0>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x7fbc618477c0>"
       ]
      },
-     "execution_count": 204,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -499,7 +499,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 205,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -511,7 +511,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 206,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -532,7 +532,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 207,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -752,7 +752,7 @@
        " ('Production I.G', 119)]"
       ]
      },
-     "execution_count": 207,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -764,7 +764,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 208,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -773,7 +773,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 209,
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "studio_data.head()\n",
+    "studios = studio_data.drop(columns='Frequency')\n",
+    "studios = studios.rename(columns = {'Studio': 'name'}, inplace = False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -797,61 +808,64 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>Studio</th>\n",
-       "      <th>Frequency</th>\n",
+       "      <th>name</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>Studio Bind</td>\n",
-       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>Studio Signpost</td>\n",
-       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>IMAGIN</td>\n",
-       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>Bibury Animation Studios</td>\n",
-       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>Toei Animation.</td>\n",
-       "      <td>1</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                     Studio  Frequency\n",
-       "0               Studio Bind          1\n",
-       "1           Studio Signpost          1\n",
-       "2                    IMAGIN          1\n",
-       "3  Bibury Animation Studios          1\n",
-       "4           Toei Animation.          1"
+       "                       name\n",
+       "0               Studio Bind\n",
+       "1           Studio Signpost\n",
+       "2                    IMAGIN\n",
+       "3  Bibury Animation Studios\n",
+       "4           Toei Animation."
       ]
      },
-     "execution_count": 209,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "studio_data.head()"
+    "studios.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 211,
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "studios.to_csv('studios.csv', index=False, encoding='utf-8')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -860,7 +874,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 212,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -873,10 +887,10 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x7f3748209910>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x7fbc61c8f940>"
       ]
      },
-     "execution_count": 212,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     },
