--- a/files/visualisation.ipynb
+++ b/files/visualisation.ipynb
@@ -521,13 +521,8 @@
     "        if type(studios) == float and pd.isna(studios):\n",
     "            continue\n",
     "            \n",
-    "        s_list = studios.split(', ')\n",
-    "    \n",
-    "        for studio in s_list:\n",
-    "            if studio not in unic_studios:\n",
-    "                unic_studios[studio] = 1\n",
-    "            else:\n",
-    "                unic_studios[studio] = unic_studios[studio]+1"
+    "        for studio in studios.split(', '):\n",
+    "            unic_studios[studio] = 1 if studio not in unic_studios else nic_studios[studio]+1"
    ]
   },
   {
